<resources>
    <string name="app_name">attempt12</string>
    <string name="matches">matches</string>
    <string name="profile">profile</string>
    <string name="place_holder">place_holder</string>
    <string name="settings">settings</string>
    <string name="record_video">record_video</string>
    <string name="name">Name-</string>
    <string name="m_f">M/F</string>
    <string name="percent">##%</string>
    <string name="age">Age-##</string>
    <string name="age2">Age</string>
    <string name="enter_name">Enter Name</string>
    <string name="todo">TODO</string>
    <string name="userID">1</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string-array name="sex">
        <item>Sex</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>
