<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="123dp"
        android:layout_height="104dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_blue_light"
        android:onClick="loadSearch"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/MatchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/MatchButton"
        android:layout_width="238dp"
        android:layout_height="44dp"
        android:layout_marginBottom="32dp"
        android:onClick="loadMatches"
        android:text="@string/matches"
        app:layout_constraintBottom_toTopOf="@id/ProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ProfileButton"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:onClick="loadProfile"
        android:text="@string/profile"
        app:layout_constraintBottom_toTopOf="@+id/SettingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/SettingButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="76dp"
        android:onClick="loadSettings"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="189dp"
        android:layout_height="56dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:text="@string/place_holder"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        android:translationX="20dp"
        app:layout_constraintBottom_toTopOf="@id/SearchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>